--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.driverClassName:org.h2.Driver
 spring.datasource.username:sa
 spring.datasource.password:
 spring.h2.console.enabled=true
+server.port=8080
+
 
